0.13

[ IMPROVEMENTS ]

- DateTime now does more validation of parameters given to
constructors and to the set() method, so bogus values like a month of
13 are a fatal error.

- Added a new constructor, from_day_of_year().

[ BUG FIXES ]

- Fix epoch() method to work properly with dates greater than 50 years
ago.  Apparently, if Time::Local is given a year less than 100, it
tries to guess the century, and it doesn't do this by simply adding
1900.  Numbers less than 53 (for the year 2003) are treated as being
in the current century.  Ugh.

- Fixed compilation on HPUX.  Patch from Dan Sully.

- Fixed problem with use of finite() function on Windows.  Some tests
still fail because apparently Windows thinks that (infinity -
infinity) = 0 instead of NaN.

- The last_day_of_month() method did not accept nanosecond or
fractional_second parameters.

- A DT::Duration object created with just nanoseconds was always
positive, regardless of the value given for nanoseconds.

- Fixed a serious bug when subtracting one datetime from another that
could cause the result to be off by up to a second, and negative when
it should be positive.  This was caused by the introduction of
nanoseconds 0.10.

- A zero length duration reported itself as positive when it should be
neither positive nor negative.


0.12     2003-05-05

[ BUG FIXES ]

- Make sure tests always run with warnings on.

- Fix line that had "$] >= 5.6.0" to be "$] >= 5.006".  This caused
warnings and was just wrong.  Reported by John Siracusa.

- Quiet warnings from pure Perl implementation.

- Quiet warnings from language modules with Unicode when used with
Perl 5.00503.


0.11     2003-05-03

[ IMPROVEMENTS ]

- Moved a little bit of the leap second code to XS, so DateTime.pm may
be a tiny bit faster.

- Added name() method to DateTime::Language.  Suggested by Rick
Measham.

- Use XSLoader with Perl 5.6.0+, which according to ancient
perl5-porters discussions saves some memory.
